@@ -24,9 +24,16 @@ __nav_buttons__([home])
     <a href="license.html">GNU General Public License</a>.
   </p>
 
+  <img src="http://www2.mate.polimi.it/ocs/?cf=42"></img>
+
   <h1>News</h1>
 
   <dl>
+    <dt>May 8, 2013</dt>
+    <dd>
+      Registrations for OctConf 2013 are
+      <a href="http://www2.mate.polimi.it/ocs/?cf=42"now open</a>!
+    </dd>
     <dt>February 21, 2013</dt>
     <dd>Version 3.6.4 has been released and is now available
       for <a href="download.html">download</a>. Octave 3.6.4 is a
@@ -58,13 +65,6 @@ __nav_buttons__([home])
     <dd>
       <a href="http://www.octave.org/wiki/OctConf_2012">OctConf
       2012</a> is currently underway.
-    </dd>
-    <dt>June 8, 2012</dt>
-    <dd>
-      <a href="http://planet.octave.org">Planet Octave</a> is up,
-      which is a collection of blogs related to Octave. At the moment,
-      it's principally dedicated to the blogs from students working
-      under Google Summer of Code.
     </dd>
   </dl>
 
