@@ -3,6 +3,11 @@ __header__([Octave News Archive], [logo])
 <div class="content">
 
 <dl>
+    <dt>May 8, 2013</dt>
+    <dd>
+      Registrations for OctConf 2013 are
+      <a href="http://www2.mate.polimi.it/ocs/?cf=42"now open</a>!
+    </dd>
     <dt>February 21, 2013</dt>
     <dd>Version 3.6.4 has been released and is now available
       for <a href="download.html">download</a>. Octave 3.6.4 is a
